2007-01-23  dima  <dima.exe@gmail.com>
  * rails-core.el: add rails-core to eval-when-compile
  * rails-ui.el (rails-minor-mode-map): 
	rebind some hotkeys
	fix snippents (bad indent after end ruby keyword)
  * rails-scripts.el: complete rewrite all script functions to using autocomplete
  * rails.el (rails-db-parameters): apply patch #8065 (thanks Akira Ikeda)

2007-01-22  dima  <dima.exe@gmail.com>
  * rails-ui.el (ruby-mode-abbrev-table): fix indentation for `end' ruby keyword

2007-01-21  dima  <dima.exe@gmail.com>	
  rename rails-for-rhtml to rails-for-view
  add rails-for-helper functionaly
  add *:switch-with-menu for helpers, functional-test
  cleanup rails-for-controller, rails-for-view
  * rails.el: 
	remove rails-for-alist
	using rails-directory<-->type for match current type and apply specific mode
  * rails-scripts.el (rails-run-script): fix #8035
  * rails-lib.el (yml-value): fix #8037

2007-01-13  dima  <dima.exe@gmail.com>
  * rails-core.el: apply patch #7342

2007-01-09  ronaldo  <ronaldo@reflectivesurface.com>
  * rails.el: 
	added a host parameter to the rails-db-conf struct
	fixed problems with YAML parameter parsing in (rails-db-parameters)
	simplified (rails-db-parameters) to avoid using database.yml directly
	(rails-run-sql) now changes directory to the root for the benefit of sqlite3
  * rails-lib.el: 
	changed yml-next-value to yml-value and added a broader search scope

2007-01-08  ronaldo  <ronaldo@reflectivesurface.com>
  * rails.el: 
	added support for other ri utilities (fast-ri, for example)
	added support for coloring on ri buffer
			
2006-12-25  dima  <dima.exe@gmail.com>
  * rails-lib.el (yml-next-value): return nil if key not found
  * rails.el: add sqlite support

2006-12-18  dima  <dima.exe@gmail.com>
  * rails-core.el (rails-core:class-by-file): fix lowercase letter after "::"
  * rails-for-rhtml.el: apply patch #7300
  * rails-for-controller.el: apply patch #7300
  * rails.el: apply patch #7301, #7295